--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
-AWS_ACCESS_KEY_ID=your_aws_access_key_here
-AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
-AWS_SESSION_TOKEN=your_aws_session_token_here
+AWS_REGION=us-west-2
+# AWS 자격증명은 IAM 역할 또는 ~/.aws/credentials 파일 사용
